--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@ h2 {
   border-image-slice: 1;
 }
 
+footer {
+  padding: 25px 0;
+  background-color: grey;
+}
+
 footer p {
+  color: #fff;
   text-align: center;
 }
